--- a/src/views/view.fxml
+++ b/src/views/view.fxml
@@ -1,8 +1,46 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.text.*?>
+<?import java.lang.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.GridPane?>
-
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<GridPane fx:controller="controller.ControleurVue"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
+
+
+<GridPane alignment="CENTER" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.40" fx:controller="controller.Controller">
+   <rowConstraints>
+      <RowConstraints minHeight="10.0" prefHeight="50.0" valignment="CENTER" />
+      <RowConstraints minHeight="10.0" prefHeight="200.0" />
+   </rowConstraints>
+   <columnConstraints>
+      <ColumnConstraints minWidth="10.0" prefWidth="400.0" />
+   </columnConstraints>
+   <children>
+      <VBox alignment="CENTER" prefHeight="332.0" prefWidth="400.0" GridPane.rowIndex="1">
+         <children>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Message sortant" textAlignment="CENTER" wrappingWidth="400.0" VBox.vgrow="ALWAYS" />
+            <TextField>
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </VBox.margin>
+            </TextField>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Message Entrant" textAlignment="CENTER" wrappingWidth="400.0" />
+            <TextArea prefHeight="50.0" prefWidth="400.0" styleClass="text" stylesheets="@style.css" wrapText="true">
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </VBox.margin>
+            </TextArea>
+            <Button fx:id="btnEnvoi" mnemonicParsing="false" onAction="#sendSMS" text="Envoi" />
+         </children>
+      </VBox>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Programme de communication " textAlignment="CENTER" wrappingWidth="400.0">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Text>
+   </children>
 </GridPane>
