--- a/src/views/view.fxml
+++ b/src/views/view.fxml
@@ -10,8 +10,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-
-<GridPane alignment="CENTER" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.40" fx:controller="controller.Controller">
+<GridPane alignment="CENTER" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Controller">
    <rowConstraints>
       <RowConstraints minHeight="10.0" prefHeight="50.0" valignment="CENTER" />
       <RowConstraints minHeight="10.0" prefHeight="200.0" />
@@ -23,13 +22,13 @@
       <VBox alignment="CENTER" prefHeight="332.0" prefWidth="400.0" GridPane.rowIndex="1">
          <children>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Message sortant" textAlignment="CENTER" wrappingWidth="400.0" VBox.vgrow="ALWAYS" />
-            <TextField>
+            <TextField fx:id="smsSortant">
                <VBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
             </TextField>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Message Entrant" textAlignment="CENTER" wrappingWidth="400.0" />
-            <TextArea prefHeight="50.0" prefWidth="400.0" styleClass="text" stylesheets="@style.css" wrapText="true">
+            <TextArea fx:id="smsEntrant" prefHeight="50.0" prefWidth="400.0" styleClass="text" stylesheets="@style.css" wrapText="true">
                <VBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
